salesforce_sfdx_QA/main/default/objects/Energy_Efficiency_Program__c/fields/Additional_Savings_Measurement__c.field-meta.xml
<CustomField>
    <fullName>Additional_Savings_Measurement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Savings Measurement</label>
    <referenceTo>vlocity_cmt__ChargeMeasurement__c</referenceTo>
    <relationshipLabel>Energy Efficiency Programs (Additional Savings Charge Measurement)</relationshipLabel>
    <relationshipName>Energy_Efficiency_Programs1</relationshipName>
    <type>Lookup</type>
</CustomField>