salesforce_sfdx_QA/main/default/objects/Energy_Efficiency_Program__c/fields/CE_Low_demand_kW_eligibility__c.field-meta.xml
<CustomField>
    <fullName>CE_Low_demand_kW_eligibility__c</fullName>
    <defaultValue>60</defaultValue>
    <label>Low demand kW eligibility</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>