salesforce_sfdx_QA/main/default/objects/Energy_Efficiency_Program__c/fields/Conga_eSign_Template_ID__c.field-meta.xml
<CustomField>
    <fullName>Conga_eSign_Template_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>used in formula to implement esign currently from workflow and outbound message action</description>
    <inlineHelpText>pick template for application esign</inlineHelpText>
    <label>Conga Template</label>
    <referenceTo>APXTConga4__Conga_Template__c</referenceTo>
    <relationshipLabel>Energy Efficiency Programs</relationshipLabel>
    <relationshipName>Energy_Efficiency_Programs</relationshipName>
    <type>Lookup</type>
</CustomField>