salesforce_sfdx_QA/main/default/objects/Energy_Efficiency_Program__c/fields/Conga_eSign_Template_PC_ID__c.field-meta.xml
<CustomField>
    <fullName>Conga_eSign_Template_PC_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Template to use if Application Payee Type is Participating Contractor or Other</inlineHelpText>
    <label>Conga Template PC</label>
    <referenceTo>APXTConga4__Conga_Template__c</referenceTo>
    <relationshipLabel>Energy Efficiency Programs (Conga Template PC)</relationshipLabel>
    <relationshipName>Energy_Efficiency_Programs1</relationshipName>
    <type>Lookup</type>
</CustomField>