salesforce_sfdx_QA/main/default/objects/Energy_Efficiency_Program__c/fields/Credit_Electricity__c.field-meta.xml
<CustomField>
    <fullName>Credit_Electricity__c</fullName>
    <label>Credit Electricity</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>