salesforce_sfdx_QA/main/default/objects/Energy_Efficiency_Program__c/fields/Credit_Natural_Gas__c.field-meta.xml
<CustomField>
    <fullName>Credit_Natural_Gas__c</fullName>
    <label>Credit Natural Gas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>