salesforce_sfdx_QA/main/default/objects/Energy_Efficiency_Program__c/fields/Get_Selected_Systems_Query__c.field-meta.xml
<CustomField>
    <fullName>Get_Selected_Systems_Query__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Get Selected Systems Query</label>
    <referenceTo>APXTConga4__Conga_Merge_Query__c</referenceTo>
    <relationshipLabel>Energy Efficiency Programs</relationshipLabel>
    <relationshipName>Energy_Efficiency_Programs</relationshipName>
    <type>Lookup</type>
</CustomField>