salesforce_sfdx_QA/main/default/objects/Energy_Efficiency_Program__c/fields/Incentive_Capping_Percent__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Capping_Percent__c</fullName>
    <label>Incentive Capping Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>