salesforce_sfdx_QA/main/default/objects/Energy_Efficiency_Program__c/fields/Payback_On_Eligible_Costs__c.field-meta.xml
<CustomField>
    <fullName>Payback_On_Eligible_Costs__c</fullName>
    <label>Payback On Eligible Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>