salesforce_sfdx_QA/main/default/objects/Energy_Efficiency_Program__c/fields/Program_Code__c.field-meta.xml
<CustomField>
    <fullName>Program_Code__c</fullName>
    <label>Program Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>