salesforce_sfdx_QA/main/default/objects/Energy_Efficiency_Program__c/fields/Program_Email__c.field-meta.xml
<CustomField>
    <fullName>Program_Email__c</fullName>
    <label>Program Email</label>
    <type>Email</type>
</CustomField>