salesforce_sfdx_QA/main/default/objects/Energy_Efficiency_Program__c/fields/Savings_Measurement__c.field-meta.xml
<CustomField>
    <fullName>Savings_Measurement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Savings Measurement</label>
    <referenceTo>vlocity_cmt__ChargeMeasurement__c</referenceTo>
    <relationshipLabel>Energy Efficiency Programs</relationshipLabel>
    <relationshipName>Energy_Efficiency_Programs</relationshipName>
    <type>Lookup</type>
</CustomField>