salesforce_sfdx_QA/main/default/objects/Energy_Efficiency_Program__c/fields/Target_Energy_Savings__c.field-meta.xml
<CustomField>
    <fullName>Target_Energy_Savings__c</fullName>
    <label>Target Energy Savings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>