salesforce_sfdx_QA/main/default/objects/Energy_Efficiency_Program__c/fields/Version_Number__c.field-meta.xml
<CustomField>
    <fullName>Version_Number__c</fullName>
    <label>Version Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>